mongodb atlas as a DB

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "app.js",
+    "start": "node app.js",
     "dev":"nodemon app.js"
   },
   "author": "",
